drm/msm/dpu: Fix pixel extension sub-sampling (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34869,6 +34869,7 @@
 	patches.suse/drm-amd-pm-powerplay-smumgr-Fix-PCIeBootLinkLevel-va.patch
 	patches.suse/drm-amd-pm-powerplay-smumgr-Fix-PCIeBootLinkLevel-va-501672e.patch
 	patches.suse/drm-msm-a6xx-Fix-GMU-firmware-parser.patch
+	patches.suse/drm-msm-dpu-Fix-pixel-extension-sub-sampling.patch
 
 	########################################################
 	# end of sorted patches
