--- a/series.conf
+++ b/series.conf
@@ -34871,6 +34871,7 @@
 	patches.suse/drm-msm-a6xx-Fix-GMU-firmware-parser.patch
 	patches.suse/drm-msm-dpu-Fix-pixel-extension-sub-sampling.patch
 	patches.suse/drm-etnaviv-fix-flush-sequence-logic.patch
+	patches.suse/drm-panel-sitronix-st7789v-fix-sync-flags-for-t28cp4.patch
 
 	########################################################
 	# end of sorted patches
