drm/sysfb: Do not dereference NULL pointer in plane reset (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56147,6 +56147,7 @@
 	patches.suse/drm-radeon-Remove-calls-to-drm_put_dev.patch
 	patches.suse/drm-amdgpu-fix-SPDX-header-on-cyan_skillfish_reg_ini.patch
 	patches.suse/drm-msm-dpu-Require-linear-modifier-for-writeback-fr.patch
+	patches.suse/drm-sysfb-Do-not-dereference-NULL-pointer-in-plane-r.patch
 
 	########################################################
 	# end of sorted patches
