drm/amdgpu: fix SPDX header on cyan_skillfish_reg_init.c (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56145,6 +56145,7 @@
 	patches.suse/ASoC-fsl_sai-Fix-sync-error-in-consumer-mode.patch
 	patches.suse/drm-radeon-Do-not-kfree-devres-managed-rdev.patch
 	patches.suse/drm-radeon-Remove-calls-to-drm_put_dev.patch
+	patches.suse/drm-amdgpu-fix-SPDX-header-on-cyan_skillfish_reg_ini.patch
 
 	########################################################
 	# end of sorted patches
