--- a/series.conf
+++ b/series.conf
@@ -56143,6 +56143,7 @@
 	patches.suse/Bluetooth-hci_core-Fix-tracking-of-periodic-advertis.patch
 	patches.suse/Bluetooth-rfcomm-fix-modem-control-handling.patch
 	patches.suse/ASoC-fsl_sai-Fix-sync-error-in-consumer-mode.patch
+	patches.suse/drm-radeon-Do-not-kfree-devres-managed-rdev.patch
 
 	########################################################
 	# end of sorted patches
