ASoC: fsl_sai: Fix sync error in consumer mode (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56142,6 +56142,7 @@
 	patches.suse/Bluetooth-btintel_pcie-Fix-event-packet-loss-issue.patch
 	patches.suse/Bluetooth-hci_core-Fix-tracking-of-periodic-advertis.patch
 	patches.suse/Bluetooth-rfcomm-fix-modem-control-handling.patch
+	patches.suse/ASoC-fsl_sai-Fix-sync-error-in-consumer-mode.patch
 
 	########################################################
 	# end of sorted patches
