drm/ast: Clear preserved bits from register output value (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56149,6 +56149,7 @@
 	patches.suse/drm-msm-dpu-Require-linear-modifier-for-writeback-fr.patch
 	patches.suse/drm-sysfb-Do-not-dereference-NULL-pointer-in-plane-r.patch
 	patches.suse/drm-nouveau-Fix-race-in-nouveau_sched_fini.patch
+	patches.suse/drm-ast-Clear-preserved-bits-from-register-output-va.patch
 
 	########################################################
 	# end of sorted patches
