--- a/series.conf
+++ b/series.conf
@@ -56144,6 +56144,7 @@
 	patches.suse/Bluetooth-rfcomm-fix-modem-control-handling.patch
 	patches.suse/ASoC-fsl_sai-Fix-sync-error-in-consumer-mode.patch
 	patches.suse/drm-radeon-Do-not-kfree-devres-managed-rdev.patch
+	patches.suse/drm-radeon-Remove-calls-to-drm_put_dev.patch
 
 	########################################################
 	# end of sorted patches
