drm/nouveau: Fix race in nouveau_sched_fini() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56148,6 +56148,7 @@
 	patches.suse/drm-amdgpu-fix-SPDX-header-on-cyan_skillfish_reg_ini.patch
 	patches.suse/drm-msm-dpu-Require-linear-modifier-for-writeback-fr.patch
 	patches.suse/drm-sysfb-Do-not-dereference-NULL-pointer-in-plane-r.patch
+	patches.suse/drm-nouveau-Fix-race-in-nouveau_sched_fini.patch
 
 	########################################################
 	# end of sorted patches
