drm/msm/dpu: Require linear modifier for writeback framebuffers (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56146,6 +56146,7 @@
 	patches.suse/drm-radeon-Do-not-kfree-devres-managed-rdev.patch
 	patches.suse/drm-radeon-Remove-calls-to-drm_put_dev.patch
 	patches.suse/drm-amdgpu-fix-SPDX-header-on-cyan_skillfish_reg_ini.patch
+	patches.suse/drm-msm-dpu-Require-linear-modifier-for-writeback-fr.patch
 
 	########################################################
 	# end of sorted patches
