crypto: aspeed - fix double free caused by devm (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12807,6 +12807,7 @@
 	patches.suse/fbdev-atyfb-Check-if-pll_ops-init_pll-failed.patch
 	patches.suse/ACPI-button-Call-input_free_device-on-failing-input-.patch
 	patches.suse/ACPI-video-Fix-use-after-free-in-acpi_video_switch_b.patch
+	patches.suse/crypto-aspeed-fix-double-free-caused-by-devm.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
