drm/mediatek: Fix device use-after-free on unbind (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12815,6 +12815,7 @@
 	patches.suse/ASoC-Intel-avs-Disable-periods-elapsed-work-when-clo.patch
 	patches.suse/ASoC-fsl_sai-fix-bit-order-for-DSD-format.patch
 	patches.suse/ASoC-fsl_sai-Fix-sync-error-in-consumer-mode.patch
+	patches.suse/drm-mediatek-Fix-device-use-after-free-on-unbind.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
