drm/panel: kingdisplay-kd097d04: Disable EoTp (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12829,6 +12829,7 @@
 	patches.suse/drm-nouveau-Fix-race-in-nouveau_sched_fini.patch
 	patches.suse/drm-etnaviv-fix-flush-sequence-logic.patch
 	patches.suse/drm-panel-sitronix-st7789v-fix-sync-flags-for-t28cp4.patch
+	patches.suse/drm-panel-kingdisplay-kd097d04-Disable-EoTp.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
