drm/msm/dpu: Require linear modifier for writeback framebuffers (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12824,6 +12824,7 @@
 	patches.suse/drm-amdgpu-fix-SPDX-header-on-cyan_skillfish_reg_ini.patch
 	patches.suse/drm-msm-a6xx-Fix-GMU-firmware-parser.patch
 	patches.suse/drm-msm-dpu-Fix-pixel-extension-sub-sampling.patch
+	patches.suse/drm-msm-dpu-Require-linear-modifier-for-writeback-fr.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
