drm/amd/pm/powerplay/smumgr: Fix PCIeBootLinkLevel value on Fiji (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12819,6 +12819,7 @@
 	patches.suse/drm-radeon-Do-not-kfree-devres-managed-rdev.patch
 	patches.suse/drm-radeon-Remove-calls-to-drm_put_dev.patch
 	patches.suse/drm-amd-pm-fix-smu-table-id-bound-check-issue-in-smu.patch
+	patches.suse/drm-amd-pm-powerplay-smumgr-Fix-PCIeBootLinkLevel-va.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
