ASoC: fsl_sai: Fix sync error in consumer mode (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12814,6 +12814,7 @@
 	patches.suse/ASoC-Intel-avs-Unprepare-a-stream-when-XRUN-occurs.patch
 	patches.suse/ASoC-Intel-avs-Disable-periods-elapsed-work-when-clo.patch
 	patches.suse/ASoC-fsl_sai-fix-bit-order-for-DSD-format.patch
+	patches.suse/ASoC-fsl_sai-Fix-sync-error-in-consumer-mode.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
