drm/radeon: Remove calls to drm_put_dev() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12817,6 +12817,7 @@
 	patches.suse/ASoC-fsl_sai-Fix-sync-error-in-consumer-mode.patch
 	patches.suse/drm-mediatek-Fix-device-use-after-free-on-unbind.patch
 	patches.suse/drm-radeon-Do-not-kfree-devres-managed-rdev.patch
+	patches.suse/drm-radeon-Remove-calls-to-drm_put_dev.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
