drm/amd/pm: fix smu table id bound check issue in smu_cmn_update_table() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12818,6 +12818,7 @@
 	patches.suse/drm-mediatek-Fix-device-use-after-free-on-unbind.patch
 	patches.suse/drm-radeon-Do-not-kfree-devres-managed-rdev.patch
 	patches.suse/drm-radeon-Remove-calls-to-drm_put_dev.patch
+	patches.suse/drm-amd-pm-fix-smu-table-id-bound-check-issue-in-smu.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
