--- a/series.conf
+++ b/series.conf
@@ -12816,6 +12816,7 @@
 	patches.suse/ASoC-fsl_sai-fix-bit-order-for-DSD-format.patch
 	patches.suse/ASoC-fsl_sai-Fix-sync-error-in-consumer-mode.patch
 	patches.suse/drm-mediatek-Fix-device-use-after-free-on-unbind.patch
+	patches.suse/drm-radeon-Do-not-kfree-devres-managed-rdev.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
