--- a/series.conf
+++ b/series.conf
@@ -12809,6 +12809,7 @@
 	patches.suse/ACPI-video-Fix-use-after-free-in-acpi_video_switch_b.patch
 	patches.suse/crypto-aspeed-fix-double-free-caused-by-devm.patch
 	patches.suse/ALSA-usb-audio-fix-control-pipe-direction.patch
+	patches.suse/ASoC-qdsp6-q6asm-do-not-sleep-while-atomic.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
