--- a/series.conf
+++ b/series.conf
@@ -12825,6 +12825,7 @@
 	patches.suse/drm-msm-a6xx-Fix-GMU-firmware-parser.patch
 	patches.suse/drm-msm-dpu-Fix-pixel-extension-sub-sampling.patch
 	patches.suse/drm-msm-dpu-Require-linear-modifier-for-writeback-fr.patch
+	patches.suse/drm-sysfb-Do-not-dereference-NULL-pointer-in-plane-r.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
