--- a/series.conf
+++ b/series.conf
@@ -12808,6 +12808,7 @@
 	patches.suse/ACPI-button-Call-input_free_device-on-failing-input-.patch
 	patches.suse/ACPI-video-Fix-use-after-free-in-acpi_video_switch_b.patch
 	patches.suse/crypto-aspeed-fix-double-free-caused-by-devm.patch
+	patches.suse/ALSA-usb-audio-fix-control-pipe-direction.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
