--- a/series.conf
+++ b/series.conf
@@ -12822,6 +12822,7 @@
 	patches.suse/drm-amd-pm-powerplay-smumgr-Fix-PCIeBootLinkLevel-va.patch
 	patches.suse/drm-amd-pm-powerplay-smumgr-Fix-PCIeBootLinkLevel-va-501672e.patch
 	patches.suse/drm-amdgpu-fix-SPDX-header-on-cyan_skillfish_reg_ini.patch
+	patches.suse/drm-msm-a6xx-Fix-GMU-firmware-parser.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
