--- a/series.conf
+++ b/series.conf
@@ -12812,6 +12812,7 @@
 	patches.suse/ASoC-qdsp6-q6asm-do-not-sleep-while-atomic.patch
 	patches.suse/ASoC-mediatek-Fix-double-pm_runtime_disable-in-remov.patch
 	patches.suse/ASoC-Intel-avs-Unprepare-a-stream-when-XRUN-occurs.patch
+	patches.suse/ASoC-Intel-avs-Disable-periods-elapsed-work-when-clo.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
