drm/panel: sitronix-st7789v: fix sync flags for t28cp45tn89 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12828,6 +12828,7 @@
 	patches.suse/drm-sysfb-Do-not-dereference-NULL-pointer-in-plane-r.patch
 	patches.suse/drm-nouveau-Fix-race-in-nouveau_sched_fini.patch
 	patches.suse/drm-etnaviv-fix-flush-sequence-logic.patch
+	patches.suse/drm-panel-sitronix-st7789v-fix-sync-flags-for-t28cp4.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
