ASoC: Intel: avs: Unprepare a stream when XRUN occurs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12811,6 +12811,7 @@
 	patches.suse/ALSA-usb-audio-fix-control-pipe-direction.patch
 	patches.suse/ASoC-qdsp6-q6asm-do-not-sleep-while-atomic.patch
 	patches.suse/ASoC-mediatek-Fix-double-pm_runtime_disable-in-remov.patch
+	patches.suse/ASoC-Intel-avs-Unprepare-a-stream-when-XRUN-occurs.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
