--- a/series.conf
+++ b/series.conf
@@ -12830,6 +12830,7 @@
 	patches.suse/drm-etnaviv-fix-flush-sequence-logic.patch
 	patches.suse/drm-panel-sitronix-st7789v-fix-sync-flags-for-t28cp4.patch
 	patches.suse/drm-panel-kingdisplay-kd097d04-Disable-EoTp.patch
+	patches.suse/drm-ast-Clear-preserved-bits-from-register-output-va.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
