--- a/series.conf
+++ b/series.conf
@@ -12813,6 +12813,7 @@
 	patches.suse/ASoC-mediatek-Fix-double-pm_runtime_disable-in-remov.patch
 	patches.suse/ASoC-Intel-avs-Unprepare-a-stream-when-XRUN-occurs.patch
 	patches.suse/ASoC-Intel-avs-Disable-periods-elapsed-work-when-clo.patch
+	patches.suse/ASoC-fsl_sai-fix-bit-order-for-DSD-format.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
