scsi: mpi3mr: Correctly handle ATA device errors (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34000,6 +34000,7 @@
 	patches.suse/jfs-truncate-good-inode-pages-when-hard-link-is-0.patch
 	patches.suse/jfs-fix-metapage-reference-count-leak-in-dbAllocCtl.patch
 	patches.suse/leds-leds-lp50xx-Handle-reg-to-get-correct-multi_ind.patch
+	patches.suse/scsi-mpi3mr-Correctly-handle-ATA-device-errors.patch
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
 	patches.suse/scsi-lpfc-Update-debugfs-trace-ring-initialization-m.patch
 	patches.suse/scsi-lpfc-Check-for-hdwq-null-ptr-when-cleaning-up-l.patch
