--- a/series.conf
+++ b/series.conf
@@ -34873,6 +34873,7 @@
 	patches.suse/drm-etnaviv-fix-flush-sequence-logic.patch
 	patches.suse/drm-panel-sitronix-st7789v-fix-sync-flags-for-t28cp4.patch
 	patches.suse/drm-panel-kingdisplay-kd097d04-Disable-EoTp.patch
+	patches.suse/regmap-slimbus-fix-bus_context-pointer-in-regmap-ini.patch
 
 	########################################################
 	# end of sorted patches
