--- a/series.conf
+++ b/series.conf
@@ -12832,6 +12832,7 @@
 	patches.suse/drm-panel-kingdisplay-kd097d04-Disable-EoTp.patch
 	patches.suse/drm-ast-Clear-preserved-bits-from-register-output-va.patch
 	patches.suse/regmap-slimbus-fix-bus_context-pointer-in-regmap-ini.patch
+	patches.suse/regulator-bd718x7-Fix-voltages-scaled-by-resistor-di.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
