--- a/series.conf
+++ b/series.conf
@@ -12831,6 +12831,7 @@
 	patches.suse/drm-panel-sitronix-st7789v-fix-sync-flags-for-t28cp4.patch
 	patches.suse/drm-panel-kingdisplay-kd097d04-Disable-EoTp.patch
 	patches.suse/drm-ast-Clear-preserved-bits-from-register-output-va.patch
+	patches.suse/regmap-slimbus-fix-bus_context-pointer-in-regmap-ini.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
