--- a/series.conf
+++ b/series.conf
@@ -1351,6 +1351,7 @@
 	patches.kernel.org/6.17.6-185-ksmbd-transport_ipc-validate-payload-size-befo.patch
 	patches.kernel.org/6.17.6-186-Linux-6.17.6.patch
 	patches.kernel.org/6.17.7-001-sched_ext-Move-internal-type-and-accessor-defi.patch
+	patches.kernel.org/6.17.7-002-sched_ext-Put-event_stats_cpu-in-struct-scx_sc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
