--- a/series.conf
+++ b/series.conf
@@ -1376,6 +1376,7 @@
 	patches.kernel.org/6.17.7-024-btrfs-abort-transaction-in-the-process_one_buf.patch
 	patches.kernel.org/6.17.7-025-btrfs-zoned-return-error-from-btrfs_zone_finis.patch
 	patches.kernel.org/6.17.7-026-btrfs-zoned-refine-extent-allocator-hint-selec.patch
+	patches.kernel.org/6.17.7-027-btrfs-scrub-replace-max_t-min_t-with-clamp-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
