--- a/series.conf
+++ b/series.conf
@@ -1357,6 +1357,7 @@
 	patches.kernel.org/6.17.7-005-x86-bugs-Report-correct-retbleed-mitigation-st.patch
 	patches.kernel.org/6.17.7-006-x86-bugs-Qualify-RETBLEED_INTEL_MSG.patch
 	patches.kernel.org/6.17.7-007-genirq-chip-Add-buslock-back-in-to-irq_set_han.patch
+	patches.kernel.org/6.17.7-008-genirq-manage-Add-buslock-back-in-to-__disable.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
