audit: record fanotify event regardless of presence of rules (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1359,6 +1359,7 @@
 	patches.kernel.org/6.17.7-007-genirq-chip-Add-buslock-back-in-to-irq_set_han.patch
 	patches.kernel.org/6.17.7-008-genirq-manage-Add-buslock-back-in-to-__disable.patch
 	patches.kernel.org/6.17.7-009-genirq-manage-Add-buslock-back-in-to-enable_ir.patch
+	patches.kernel.org/6.17.7-010-audit-record-fanotify-event-regardless-of-pres.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
