sched_ext: Make qmap dump operation non-destructive (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1382,6 +1382,7 @@
 	patches.kernel.org/6.17.7-030-btrfs-abort-transaction-if-we-fail-to-update-i.patch
 	patches.kernel.org/6.17.7-031-btrfs-tree-checker-add-inode-extref-checks.patch
 	patches.kernel.org/6.17.7-032-btrfs-use-smp_mb__after_atomic-when-forcing-CO.patch
+	patches.kernel.org/6.17.7-033-sched_ext-Make-qmap-dump-operation-non-destruc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
