btrfs: abort transaction in the process_one_buffer() log tree walk callback (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1373,6 +1373,7 @@
 	patches.kernel.org/6.17.7-021-EDAC-mc_sysfs-Increase-legacy-channel-support-.patch
 	patches.kernel.org/6.17.7-022-cpuset-Use-new-excpus-for-nocpu-error-check-wh.patch
 	patches.kernel.org/6.17.7-023-btrfs-abort-transaction-on-specific-error-plac.patch
+	patches.kernel.org/6.17.7-024-btrfs-abort-transaction-in-the-process_one_buf.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
