EDAC/mc_sysfs: Increase legacy channel support to 16 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1370,6 +1370,7 @@
 	patches.kernel.org/6.17.7-018-sched_ext-Keep-bypass-on-between-enable-failur.patch
 	patches.kernel.org/6.17.7-019-x86-bugs-Add-attack-vector-controls-for-VMSCAP.patch
 	patches.kernel.org/6.17.7-020-x86-bugs-Fix-reporting-of-LFENCE-retpoline.patch
+	patches.kernel.org/6.17.7-021-EDAC-mc_sysfs-Increase-legacy-channel-support-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
