--- a/series.conf
+++ b/series.conf
@@ -1369,6 +1369,7 @@
 	patches.kernel.org/6.17.7-017-seccomp-passthrough-uprobe-systemcall-without-.patch
 	patches.kernel.org/6.17.7-018-sched_ext-Keep-bypass-on-between-enable-failur.patch
 	patches.kernel.org/6.17.7-019-x86-bugs-Add-attack-vector-controls-for-VMSCAP.patch
+	patches.kernel.org/6.17.7-020-x86-bugs-Fix-reporting-of-LFENCE-retpoline.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
