--- a/series.conf
+++ b/series.conf
@@ -1354,6 +1354,7 @@
 	patches.kernel.org/6.17.7-002-sched_ext-Put-event_stats_cpu-in-struct-scx_sc.patch
 	patches.kernel.org/6.17.7-003-sched_ext-Sync-error_irq_work-before-freeing-s.patch
 	patches.kernel.org/6.17.7-004-timekeeping-Fix-aux-clocks-sysfs-initializatio.patch
+	patches.kernel.org/6.17.7-005-x86-bugs-Report-correct-retbleed-mitigation-st.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
