EDAC: Fix wrong executable file modes for C source files (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1365,6 +1365,7 @@
 	patches.kernel.org/6.17.7-013-perf-Use-current-flags-PF_KTHREAD-PF_USER_WORK.patch
 	patches.kernel.org/6.17.7-014-perf-Have-get_perf_callchain-return-NULL-if-cr.patch
 	patches.kernel.org/6.17.7-015-perf-Skip-user-unwind-if-the-task-is-a-kernel-.patch
+	patches.kernel.org/6.17.7-016-EDAC-Fix-wrong-executable-file-modes-for-C-sou.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
