btrfs: always drop log root tree reference in btrfs_replay_log() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1377,6 +1377,7 @@
 	patches.kernel.org/6.17.7-025-btrfs-zoned-return-error-from-btrfs_zone_finis.patch
 	patches.kernel.org/6.17.7-026-btrfs-zoned-refine-extent-allocator-hint-selec.patch
 	patches.kernel.org/6.17.7-027-btrfs-scrub-replace-max_t-min_t-with-clamp-in-.patch
+	patches.kernel.org/6.17.7-028-btrfs-always-drop-log-root-tree-reference-in-b.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
