--- a/series.conf
+++ b/series.conf
@@ -1352,6 +1352,7 @@
 	patches.kernel.org/6.17.6-186-Linux-6.17.6.patch
 	patches.kernel.org/6.17.7-001-sched_ext-Move-internal-type-and-accessor-defi.patch
 	patches.kernel.org/6.17.7-002-sched_ext-Put-event_stats_cpu-in-struct-scx_sc.patch
+	patches.kernel.org/6.17.7-003-sched_ext-Sync-error_irq_work-before-freeing-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
