--- a/series.conf
+++ b/series.conf
@@ -1364,6 +1364,7 @@
 	patches.kernel.org/6.17.7-012-perf-x86-intel-Add-ICL_FIXED_0_ADAPTIVE-bit-in.patch
 	patches.kernel.org/6.17.7-013-perf-Use-current-flags-PF_KTHREAD-PF_USER_WORK.patch
 	patches.kernel.org/6.17.7-014-perf-Have-get_perf_callchain-return-NULL-if-cr.patch
+	patches.kernel.org/6.17.7-015-perf-Skip-user-unwind-if-the-task-is-a-kernel-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
