--- a/series.conf
+++ b/series.conf
@@ -1350,6 +1350,7 @@
 	patches.kernel.org/6.17.6-184-gpio-idio-16-Define-fixed-direction-of-the-GPI.patch
 	patches.kernel.org/6.17.6-185-ksmbd-transport_ipc-validate-payload-size-befo.patch
 	patches.kernel.org/6.17.6-186-Linux-6.17.6.patch
+	patches.kernel.org/6.17.7-001-sched_ext-Move-internal-type-and-accessor-defi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
