--- a/series.conf
+++ b/series.conf
@@ -1383,6 +1383,7 @@
 	patches.kernel.org/6.17.7-031-btrfs-tree-checker-add-inode-extref-checks.patch
 	patches.kernel.org/6.17.7-032-btrfs-use-smp_mb__after_atomic-when-forcing-CO.patch
 	patches.kernel.org/6.17.7-033-sched_ext-Make-qmap-dump-operation-non-destruc.patch
+	patches.kernel.org/6.17.7-034-arch-Add-the-macro-COMPILE_OFFSETS-to-all-the-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
