--- a/series.conf
+++ b/series.conf
@@ -1372,6 +1372,7 @@
 	patches.kernel.org/6.17.7-020-x86-bugs-Fix-reporting-of-LFENCE-retpoline.patch
 	patches.kernel.org/6.17.7-021-EDAC-mc_sysfs-Increase-legacy-channel-support-.patch
 	patches.kernel.org/6.17.7-022-cpuset-Use-new-excpus-for-nocpu-error-check-wh.patch
+	patches.kernel.org/6.17.7-023-btrfs-abort-transaction-on-specific-error-plac.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
