--- a/series.conf
+++ b/series.conf
@@ -1355,6 +1355,7 @@
 	patches.kernel.org/6.17.7-003-sched_ext-Sync-error_irq_work-before-freeing-s.patch
 	patches.kernel.org/6.17.7-004-timekeeping-Fix-aux-clocks-sysfs-initializatio.patch
 	patches.kernel.org/6.17.7-005-x86-bugs-Report-correct-retbleed-mitigation-st.patch
+	patches.kernel.org/6.17.7-006-x86-bugs-Qualify-RETBLEED_INTEL_MSG.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
