x86/bugs: Add attack vector controls for VMSCAPE (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1368,6 +1368,7 @@
 	patches.kernel.org/6.17.7-016-EDAC-Fix-wrong-executable-file-modes-for-C-sou.patch
 	patches.kernel.org/6.17.7-017-seccomp-passthrough-uprobe-systemcall-without-.patch
 	patches.kernel.org/6.17.7-018-sched_ext-Keep-bypass-on-between-enable-failur.patch
+	patches.kernel.org/6.17.7-019-x86-bugs-Add-attack-vector-controls-for-VMSCAP.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
