--- a/series.conf
+++ b/series.conf
@@ -1361,6 +1361,7 @@
 	patches.kernel.org/6.17.7-009-genirq-manage-Add-buslock-back-in-to-enable_ir.patch
 	patches.kernel.org/6.17.7-010-audit-record-fanotify-event-regardless-of-pres.patch
 	patches.kernel.org/6.17.7-011-EDAC-ie31200-Add-two-more-Intel-Alder-Lake-S-S.patch
+	patches.kernel.org/6.17.7-012-perf-x86-intel-Add-ICL_FIXED_0_ADAPTIVE-bit-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
