btrfs: zoned: refine extent allocator hint selection (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1375,6 +1375,7 @@
 	patches.kernel.org/6.17.7-023-btrfs-abort-transaction-on-specific-error-plac.patch
 	patches.kernel.org/6.17.7-024-btrfs-abort-transaction-in-the-process_one_buf.patch
 	patches.kernel.org/6.17.7-025-btrfs-zoned-return-error-from-btrfs_zone_finis.patch
+	patches.kernel.org/6.17.7-026-btrfs-zoned-refine-extent-allocator-hint-selec.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
