btrfs: tree-checker: add inode extref checks (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1380,6 +1380,7 @@
 	patches.kernel.org/6.17.7-028-btrfs-always-drop-log-root-tree-reference-in-b.patch
 	patches.kernel.org/6.17.7-029-btrfs-use-level-argument-in-log-tree-walk-call.patch
 	patches.kernel.org/6.17.7-030-btrfs-abort-transaction-if-we-fail-to-update-i.patch
+	patches.kernel.org/6.17.7-031-btrfs-tree-checker-add-inode-extref-checks.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
