--- a/series.conf
+++ b/series.conf
@@ -1362,6 +1362,7 @@
 	patches.kernel.org/6.17.7-010-audit-record-fanotify-event-regardless-of-pres.patch
 	patches.kernel.org/6.17.7-011-EDAC-ie31200-Add-two-more-Intel-Alder-Lake-S-S.patch
 	patches.kernel.org/6.17.7-012-perf-x86-intel-Add-ICL_FIXED_0_ADAPTIVE-bit-in.patch
+	patches.kernel.org/6.17.7-013-perf-Use-current-flags-PF_KTHREAD-PF_USER_WORK.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
