timekeeping: Fix aux clocks sysfs initialization loop bound (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1353,6 +1353,7 @@
 	patches.kernel.org/6.17.7-001-sched_ext-Move-internal-type-and-accessor-defi.patch
 	patches.kernel.org/6.17.7-002-sched_ext-Put-event_stats_cpu-in-struct-scx_sc.patch
 	patches.kernel.org/6.17.7-003-sched_ext-Sync-error_irq_work-before-freeing-s.patch
+	patches.kernel.org/6.17.7-004-timekeeping-Fix-aux-clocks-sysfs-initializatio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
