btrfs: use level argument in log tree walk callback replay_one_buffer() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1378,6 +1378,7 @@
 	patches.kernel.org/6.17.7-026-btrfs-zoned-refine-extent-allocator-hint-selec.patch
 	patches.kernel.org/6.17.7-027-btrfs-scrub-replace-max_t-min_t-with-clamp-in-.patch
 	patches.kernel.org/6.17.7-028-btrfs-always-drop-log-root-tree-reference-in-b.patch
+	patches.kernel.org/6.17.7-029-btrfs-use-level-argument-in-log-tree-walk-call.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
