--- a/series.conf
+++ b/series.conf
@@ -1367,6 +1367,7 @@
 	patches.kernel.org/6.17.7-015-perf-Skip-user-unwind-if-the-task-is-a-kernel-.patch
 	patches.kernel.org/6.17.7-016-EDAC-Fix-wrong-executable-file-modes-for-C-sou.patch
 	patches.kernel.org/6.17.7-017-seccomp-passthrough-uprobe-systemcall-without-.patch
+	patches.kernel.org/6.17.7-018-sched_ext-Keep-bypass-on-between-enable-failur.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
