--- a/series.conf
+++ b/series.conf
@@ -1381,6 +1381,7 @@
 	patches.kernel.org/6.17.7-029-btrfs-use-level-argument-in-log-tree-walk-call.patch
 	patches.kernel.org/6.17.7-030-btrfs-abort-transaction-if-we-fail-to-update-i.patch
 	patches.kernel.org/6.17.7-031-btrfs-tree-checker-add-inode-extref-checks.patch
+	patches.kernel.org/6.17.7-032-btrfs-use-smp_mb__after_atomic-when-forcing-CO.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
