--- a/series.conf
+++ b/series.conf
@@ -1379,6 +1379,7 @@
 	patches.kernel.org/6.17.7-027-btrfs-scrub-replace-max_t-min_t-with-clamp-in-.patch
 	patches.kernel.org/6.17.7-028-btrfs-always-drop-log-root-tree-reference-in-b.patch
 	patches.kernel.org/6.17.7-029-btrfs-use-level-argument-in-log-tree-walk-call.patch
+	patches.kernel.org/6.17.7-030-btrfs-abort-transaction-if-we-fail-to-update-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
