btrfs: tree-checker: fix bounds check in check_inode_extref() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1384,6 +1384,7 @@
 	patches.kernel.org/6.17.7-032-btrfs-use-smp_mb__after_atomic-when-forcing-CO.patch
 	patches.kernel.org/6.17.7-033-sched_ext-Make-qmap-dump-operation-non-destruc.patch
 	patches.kernel.org/6.17.7-034-arch-Add-the-macro-COMPILE_OFFSETS-to-all-the-.patch
+	patches.kernel.org/6.17.7-035-btrfs-tree-checker-fix-bounds-check-in-check_i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
