--- a/series.conf
+++ b/series.conf
@@ -11553,6 +11553,7 @@
 	patches.kernel.org/6.12.57-036-gpio-idio-16-Define-fixed-direction-of-the-GP.patch
 	patches.kernel.org/6.12.57-037-iommu-vt-d-Avoid-use-of-NULL-after-WARN_ON_ON.patch
 	patches.kernel.org/6.12.57-038-wifi-ath12k-fix-read-pointer-after-free-in-at.patch
+	patches.kernel.org/6.12.57-039-udmabuf-fix-a-buf-size-overflow-issue-during-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
