--- a/series.conf
+++ b/series.conf
@@ -11519,6 +11519,7 @@
 	patches.kernel.org/6.12.57-002-audit-record-fanotify-event-regardless-of-pre.patch
 	patches.kernel.org/6.12.57-003-perf-x86-intel-Add-ICL_FIXED_0_ADAPTIVE-bit-i.patch
 	patches.kernel.org/6.12.57-004-perf-Use-current-flags-PF_KTHREAD-PF_USER_WOR.patch
+	patches.kernel.org/6.12.57-005-perf-Have-get_perf_callchain-return-NULL-if-c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
