btrfs: abort transaction on specific error places when walking log tree (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11526,6 +11526,7 @@
 	patches.kernel.org/6.12.57-009-x86-bugs-Fix-reporting-of-LFENCE-retpoline.patch
 	patches.kernel.org/6.12.57-010-EDAC-mc_sysfs-Increase-legacy-channel-support.patch
 	patches.kernel.org/6.12.57-011-cpuset-Use-new-excpus-for-nocpu-error-check-w.patch
+	patches.kernel.org/6.12.57-012-btrfs-abort-transaction-on-specific-error-pla.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
