perf: Use current->flags & PF_KTHREAD|PF_USER_WORKER instead of current->mm == NULL (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11518,6 +11518,7 @@
 	patches.kernel.org/6.12.57-001-net-sched-sch_qfq-Fix-null-deref-in-agg_deque.patch
 	patches.kernel.org/6.12.57-002-audit-record-fanotify-event-regardless-of-pre.patch
 	patches.kernel.org/6.12.57-003-perf-x86-intel-Add-ICL_FIXED_0_ADAPTIVE-bit-i.patch
+	patches.kernel.org/6.12.57-004-perf-Use-current-flags-PF_KTHREAD-PF_USER_WOR.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
