x86/bugs: Report correct retbleed mitigation status (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11522,6 +11522,7 @@
 	patches.kernel.org/6.12.57-005-perf-Have-get_perf_callchain-return-NULL-if-c.patch
 	patches.kernel.org/6.12.57-006-perf-Skip-user-unwind-if-the-task-is-a-kernel.patch
 	patches.kernel.org/6.12.57-007-seccomp-passthrough-uprobe-systemcall-without.patch
+	patches.kernel.org/6.12.57-008-x86-bugs-Report-correct-retbleed-mitigation-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
