gpio: regmap: add the .fixed_direction_output configuration parameter (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11549,6 +11549,7 @@
 	patches.kernel.org/6.12.57-032-bits-add-comments-and-newlines-to-if-else-and.patch
 	patches.kernel.org/6.12.57-033-bits-introduce-fixed-type-GENMASK_U.patch
 	patches.kernel.org/6.12.57-034-gpio-regmap-Allow-to-allocate-regmap-irq-devi.patch
+	patches.kernel.org/6.12.57-035-gpio-regmap-add-the-.fixed_direction_output-c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
