btrfs: tree-checker: fix bounds check in check_inode_extref() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11555,6 +11555,7 @@
 	patches.kernel.org/6.12.57-038-wifi-ath12k-fix-read-pointer-after-free-in-at.patch
 	patches.kernel.org/6.12.57-039-udmabuf-fix-a-buf-size-overflow-issue-during-.patch
 	patches.kernel.org/6.12.57-040-sfc-fix-NULL-dereferences-in-ef100_process_de.patch
+	patches.kernel.org/6.12.57-041-btrfs-tree-checker-fix-bounds-check-in-check_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
