btrfs: always drop log root tree reference in btrfs_replay_log() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11531,6 +11531,7 @@
 	patches.kernel.org/6.12.57-014-btrfs-zoned-return-error-from-btrfs_zone_fini.patch
 	patches.kernel.org/6.12.57-015-btrfs-zoned-refine-extent-allocator-hint-sele.patch
 	patches.kernel.org/6.12.57-016-btrfs-scrub-replace-max_t-min_t-with-clamp-in.patch
+	patches.kernel.org/6.12.57-017-btrfs-always-drop-log-root-tree-reference-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
