--- a/series.conf
+++ b/series.conf
@@ -11540,6 +11540,7 @@
 	patches.kernel.org/6.12.57-023-arch-Add-the-macro-COMPILE_OFFSETS-to-all-the.patch
 	patches.kernel.org/6.12.57-024-docs-kdoc-handle-the-obsolescensce-of-docutil.patch
 	patches.kernel.org/6.12.57-025-selftests-mptcp-disable-add_addr-retrans-in-e.patch
+	patches.kernel.org/6.12.57-026-selftests-mptcp-join-mark-delete-re-add-signa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
