--- a/series.conf
+++ b/series.conf
@@ -11554,6 +11554,7 @@
 	patches.kernel.org/6.12.57-037-iommu-vt-d-Avoid-use-of-NULL-after-WARN_ON_ON.patch
 	patches.kernel.org/6.12.57-038-wifi-ath12k-fix-read-pointer-after-free-in-at.patch
 	patches.kernel.org/6.12.57-039-udmabuf-fix-a-buf-size-overflow-issue-during-.patch
+	patches.kernel.org/6.12.57-040-sfc-fix-NULL-dereferences-in-ef100_process_de.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
