bonding: return detailed error when loading native XDP fails (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11544,6 +11544,7 @@
 	patches.kernel.org/6.12.57-027-mptcp-pm-in-kernel-C-flag-handle-late-ADD_ADD.patch
 	patches.kernel.org/6.12.57-028-f2fs-fix-to-avoid-panic-once-fallocation-fail.patch
 	patches.kernel.org/6.12.57-029-wifi-cfg80211-Add-missing-lock-in-cfg80211_ch.patch
+	patches.kernel.org/6.12.57-030-bonding-return-detailed-error-when-loading-na.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
