net/sched: sch_qfq: Fix null-deref in agg_dequeue (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11515,6 +11515,7 @@
 	patches.kernel.org/6.12.56-117-xfs-always-warn-about-deprecated-mount-option.patch
 	patches.kernel.org/6.12.56-118-ksmbd-transport_ipc-validate-payload-size-bef.patch
 	patches.kernel.org/6.12.56-119-Linux-6.12.56.patch
+	patches.kernel.org/6.12.57-001-net-sched-sch_qfq-Fix-null-deref-in-agg_deque.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
