btrfs: use level argument in log tree walk callback replay_one_buffer() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11532,6 +11532,7 @@
 	patches.kernel.org/6.12.57-015-btrfs-zoned-refine-extent-allocator-hint-sele.patch
 	patches.kernel.org/6.12.57-016-btrfs-scrub-replace-max_t-min_t-with-clamp-in.patch
 	patches.kernel.org/6.12.57-017-btrfs-always-drop-log-root-tree-reference-in-.patch
+	patches.kernel.org/6.12.57-018-btrfs-use-level-argument-in-log-tree-walk-cal.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
