seccomp: passthrough uprobe systemcall without filtering (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11521,6 +11521,7 @@
 	patches.kernel.org/6.12.57-004-perf-Use-current-flags-PF_KTHREAD-PF_USER_WOR.patch
 	patches.kernel.org/6.12.57-005-perf-Have-get_perf_callchain-return-NULL-if-c.patch
 	patches.kernel.org/6.12.57-006-perf-Skip-user-unwind-if-the-task-is-a-kernel.patch
+	patches.kernel.org/6.12.57-007-seccomp-passthrough-uprobe-systemcall-without.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
