--- a/series.conf
+++ b/series.conf
@@ -11527,6 +11527,7 @@
 	patches.kernel.org/6.12.57-010-EDAC-mc_sysfs-Increase-legacy-channel-support.patch
 	patches.kernel.org/6.12.57-011-cpuset-Use-new-excpus-for-nocpu-error-check-w.patch
 	patches.kernel.org/6.12.57-012-btrfs-abort-transaction-on-specific-error-pla.patch
+	patches.kernel.org/6.12.57-013-btrfs-abort-transaction-in-the-process_one_bu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
