--- a/series.conf
+++ b/series.conf
@@ -11550,6 +11550,7 @@
 	patches.kernel.org/6.12.57-033-bits-introduce-fixed-type-GENMASK_U.patch
 	patches.kernel.org/6.12.57-034-gpio-regmap-Allow-to-allocate-regmap-irq-devi.patch
 	patches.kernel.org/6.12.57-035-gpio-regmap-add-the-.fixed_direction_output-c.patch
+	patches.kernel.org/6.12.57-036-gpio-idio-16-Define-fixed-direction-of-the-GP.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
