mptcp: pm: in-kernel: C-flag: handle late ADD_ADDR (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11541,6 +11541,7 @@
 	patches.kernel.org/6.12.57-024-docs-kdoc-handle-the-obsolescensce-of-docutil.patch
 	patches.kernel.org/6.12.57-025-selftests-mptcp-disable-add_addr-retrans-in-e.patch
 	patches.kernel.org/6.12.57-026-selftests-mptcp-join-mark-delete-re-add-signa.patch
+	patches.kernel.org/6.12.57-027-mptcp-pm-in-kernel-C-flag-handle-late-ADD_ADD.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
