--- a/series.conf
+++ b/series.conf
@@ -11548,6 +11548,7 @@
 	patches.kernel.org/6.12.57-031-bonding-check-xdp-prog-when-set-bond-mode.patch
 	patches.kernel.org/6.12.57-032-bits-add-comments-and-newlines-to-if-else-and.patch
 	patches.kernel.org/6.12.57-033-bits-introduce-fixed-type-GENMASK_U.patch
+	patches.kernel.org/6.12.57-034-gpio-regmap-Allow-to-allocate-regmap-irq-devi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
