--- a/series.conf
+++ b/series.conf
@@ -11536,6 +11536,7 @@
 	patches.kernel.org/6.12.57-019-btrfs-abort-transaction-if-we-fail-to-update-.patch
 	patches.kernel.org/6.12.57-020-btrfs-tree-checker-add-inode-extref-checks.patch
 	patches.kernel.org/6.12.57-021-btrfs-use-smp_mb__after_atomic-when-forcing-C.patch
+	patches.kernel.org/6.12.57-022-sched_ext-Make-qmap-dump-operation-non-destru.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
