--- a/series.conf
+++ b/series.conf
@@ -11556,6 +11556,7 @@
 	patches.kernel.org/6.12.57-039-udmabuf-fix-a-buf-size-overflow-issue-during-.patch
 	patches.kernel.org/6.12.57-040-sfc-fix-NULL-dereferences-in-ef100_process_de.patch
 	patches.kernel.org/6.12.57-041-btrfs-tree-checker-fix-bounds-check-in-check_.patch
+	patches.kernel.org/6.12.57-042-Linux-6.12.57.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
