selftests: mptcp: disable add_addr retrans in endpoint_tests (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11539,6 +11539,7 @@
 	patches.kernel.org/6.12.57-022-sched_ext-Make-qmap-dump-operation-non-destru.patch
 	patches.kernel.org/6.12.57-023-arch-Add-the-macro-COMPILE_OFFSETS-to-all-the.patch
 	patches.kernel.org/6.12.57-024-docs-kdoc-handle-the-obsolescensce-of-docutil.patch
+	patches.kernel.org/6.12.57-025-selftests-mptcp-disable-add_addr-retrans-in-e.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
