--- a/series.conf
+++ b/series.conf
@@ -11551,6 +11551,7 @@
 	patches.kernel.org/6.12.57-034-gpio-regmap-Allow-to-allocate-regmap-irq-devi.patch
 	patches.kernel.org/6.12.57-035-gpio-regmap-add-the-.fixed_direction_output-c.patch
 	patches.kernel.org/6.12.57-036-gpio-idio-16-Define-fixed-direction-of-the-GP.patch
+	patches.kernel.org/6.12.57-037-iommu-vt-d-Avoid-use-of-NULL-after-WARN_ON_ON.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
