cpuset: Use new excpus for nocpu error check when enabling root partition (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11525,6 +11525,7 @@
 	patches.kernel.org/6.12.57-008-x86-bugs-Report-correct-retbleed-mitigation-s.patch
 	patches.kernel.org/6.12.57-009-x86-bugs-Fix-reporting-of-LFENCE-retpoline.patch
 	patches.kernel.org/6.12.57-010-EDAC-mc_sysfs-Increase-legacy-channel-support.patch
+	patches.kernel.org/6.12.57-011-cpuset-Use-new-excpus-for-nocpu-error-check-w.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
