btrfs: zoned: refine extent allocator hint selection (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11529,6 +11529,7 @@
 	patches.kernel.org/6.12.57-012-btrfs-abort-transaction-on-specific-error-pla.patch
 	patches.kernel.org/6.12.57-013-btrfs-abort-transaction-in-the-process_one_bu.patch
 	patches.kernel.org/6.12.57-014-btrfs-zoned-return-error-from-btrfs_zone_fini.patch
+	patches.kernel.org/6.12.57-015-btrfs-zoned-refine-extent-allocator-hint-sele.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
