btrfs: abort transaction if we fail to update inode in log replay dir fixup (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11533,6 +11533,7 @@
 	patches.kernel.org/6.12.57-016-btrfs-scrub-replace-max_t-min_t-with-clamp-in.patch
 	patches.kernel.org/6.12.57-017-btrfs-always-drop-log-root-tree-reference-in-.patch
 	patches.kernel.org/6.12.57-018-btrfs-use-level-argument-in-log-tree-walk-cal.patch
+	patches.kernel.org/6.12.57-019-btrfs-abort-transaction-if-we-fail-to-update-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
