--- a/series.conf
+++ b/series.conf
@@ -11542,6 +11542,7 @@
 	patches.kernel.org/6.12.57-025-selftests-mptcp-disable-add_addr-retrans-in-e.patch
 	patches.kernel.org/6.12.57-026-selftests-mptcp-join-mark-delete-re-add-signa.patch
 	patches.kernel.org/6.12.57-027-mptcp-pm-in-kernel-C-flag-handle-late-ADD_ADD.patch
+	patches.kernel.org/6.12.57-028-f2fs-fix-to-avoid-panic-once-fallocation-fail.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
