--- a/series.conf
+++ b/series.conf
@@ -11546,6 +11546,7 @@
 	patches.kernel.org/6.12.57-029-wifi-cfg80211-Add-missing-lock-in-cfg80211_ch.patch
 	patches.kernel.org/6.12.57-030-bonding-return-detailed-error-when-loading-na.patch
 	patches.kernel.org/6.12.57-031-bonding-check-xdp-prog-when-set-bond-mode.patch
+	patches.kernel.org/6.12.57-032-bits-add-comments-and-newlines-to-if-else-and.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
