--- a/series.conf
+++ b/series.conf
@@ -11524,6 +11524,7 @@
 	patches.kernel.org/6.12.57-007-seccomp-passthrough-uprobe-systemcall-without.patch
 	patches.kernel.org/6.12.57-008-x86-bugs-Report-correct-retbleed-mitigation-s.patch
 	patches.kernel.org/6.12.57-009-x86-bugs-Fix-reporting-of-LFENCE-retpoline.patch
+	patches.kernel.org/6.12.57-010-EDAC-mc_sysfs-Increase-legacy-channel-support.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
