--- a/series.conf
+++ b/series.conf
@@ -11535,6 +11535,7 @@
 	patches.kernel.org/6.12.57-018-btrfs-use-level-argument-in-log-tree-walk-cal.patch
 	patches.kernel.org/6.12.57-019-btrfs-abort-transaction-if-we-fail-to-update-.patch
 	patches.kernel.org/6.12.57-020-btrfs-tree-checker-add-inode-extref-checks.patch
+	patches.kernel.org/6.12.57-021-btrfs-use-smp_mb__after_atomic-when-forcing-C.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
