bonding: check xdp prog when set bond mode (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11545,6 +11545,7 @@
 	patches.kernel.org/6.12.57-028-f2fs-fix-to-avoid-panic-once-fallocation-fail.patch
 	patches.kernel.org/6.12.57-029-wifi-cfg80211-Add-missing-lock-in-cfg80211_ch.patch
 	patches.kernel.org/6.12.57-030-bonding-return-detailed-error-when-loading-na.patch
+	patches.kernel.org/6.12.57-031-bonding-check-xdp-prog-when-set-bond-mode.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
