x86/bugs: Fix reporting of LFENCE retpoline (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11523,6 +11523,7 @@
 	patches.kernel.org/6.12.57-006-perf-Skip-user-unwind-if-the-task-is-a-kernel.patch
 	patches.kernel.org/6.12.57-007-seccomp-passthrough-uprobe-systemcall-without.patch
 	patches.kernel.org/6.12.57-008-x86-bugs-Report-correct-retbleed-mitigation-s.patch
+	patches.kernel.org/6.12.57-009-x86-bugs-Fix-reporting-of-LFENCE-retpoline.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
