btrfs: tree-checker: add inode extref checks (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11534,6 +11534,7 @@
 	patches.kernel.org/6.12.57-017-btrfs-always-drop-log-root-tree-reference-in-.patch
 	patches.kernel.org/6.12.57-018-btrfs-use-level-argument-in-log-tree-walk-cal.patch
 	patches.kernel.org/6.12.57-019-btrfs-abort-transaction-if-we-fail-to-update-.patch
+	patches.kernel.org/6.12.57-020-btrfs-tree-checker-add-inode-extref-checks.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
