audit: record fanotify event regardless of presence of rules (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11516,6 +11516,7 @@
 	patches.kernel.org/6.12.56-118-ksmbd-transport_ipc-validate-payload-size-bef.patch
 	patches.kernel.org/6.12.56-119-Linux-6.12.56.patch
 	patches.kernel.org/6.12.57-001-net-sched-sch_qfq-Fix-null-deref-in-agg_deque.patch
+	patches.kernel.org/6.12.57-002-audit-record-fanotify-event-regardless-of-pre.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
