bits: introduce fixed-type GENMASK_U*() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11547,6 +11547,7 @@
 	patches.kernel.org/6.12.57-030-bonding-return-detailed-error-when-loading-na.patch
 	patches.kernel.org/6.12.57-031-bonding-check-xdp-prog-when-set-bond-mode.patch
 	patches.kernel.org/6.12.57-032-bits-add-comments-and-newlines-to-if-else-and.patch
+	patches.kernel.org/6.12.57-033-bits-introduce-fixed-type-GENMASK_U.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
