--- a/blacklist.conf
+++ b/blacklist.conf
@@ -580,3 +580,5 @@ f76d4c28a46a9260d85e00dafc8f46d369365d33 # Preparation for blocksize > pagesize 
 29ec9bed2395061350249ae356fb300dd82a78e7 # Hole punching on *huge* files is more restricted than it should be. Unlikely to be hit in practice.
 82e6381e23f1ea7a14f418215068aaa2ca046c84 # Unit test fix
 757fc66da91b54d4fbc414bee5c440b52560d3b7 # Comment fix
+85975daeaa4d6ec560bfcd354fc9c08ad7f38888 # Introducing bad performance in idle governor
+10fad4012234a7dea621ae17c0c9486824f645a0 # Revert above changes
