--- a/series.conf
+++ b/series.conf
@@ -1421,8 +1421,7 @@
 	patches.suse/net-cadence-macb-Add-support-for-Raspberry-Pi-RP1-et.patch
 	patches.suse/fs-return-EOPNOTSUPP-from-file_setattr-file_getattr-.patch
 
-
-	# out-of-tree patches
+	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
 
 	########################################################
