fbcon: Fix OOB access in font allocation (bsc#1252033)

--- a/series.conf
+++ b/series.conf
@@ -24045,6 +24045,7 @@
 	patches.suse/xfrm-xfrm_alloc_spi-shouldn-t-use-0-as-SPI.patch
 	patches.suse/octeontx2-pf-Fix-potential-use-after-free-in-otx2_tc_add_f.patch
 	patches.suse/fbcon-fix-integer-overflow-in-fbcon_do_set_font.patch
+	patches.suse/fbcon-Fix-OOB-access-in-font-allocation.patch
 	patches.suse/ipvs-Defer-ip_vs_ftp-unregister-during-netns-cleanup.patch
 
 	########################################################
