--- a/series.conf
+++ b/series.conf
@@ -27140,6 +27140,7 @@
 	patches.suse/KVM-VMX-Split-out-the-non-virtualization-part-of-vmx.patch
 	patches.suse/KVM-nVMX-Check-for-pending-posted-interrupts-when-lo.patch
 	patches.suse/KVM-x86-mmu-Bug-the-VM-if-KVM-tries-to-split-a-hugep.patch
+	patches.suse/KVM-x86-Replace-static_call_cond-with-static_call.patch
 	patches.suse/pinctrl-rockchip-update-rk3308-iomux-routes.patch
 	patches.suse/pinctrl-core-fix-possible-memory-leak-when-pinctrl_e.patch
 	patches.suse/pinctrl-single-fix-possible-memory-leak-when-pinctrl.patch
