--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1225,3 +1225,4 @@ fa3fa55de0d6177fdcaf6fc254f13cc8f33c3eed # Try to fix up above
 5a830bbce3af16833fe0092dec47b6dd30279825 # pure cleanup
 27af31e44949fa85550176520ef7086a0d00fd7b # cleanup for clang
 5d69eca542ee17c618f9a55da52191d5e28b435f # Cosmetic fix, apply only in response to customer bug
+5fe6ec8f6ab549b6422e41551abb51802bd48bc7 # Tracepoint fix, small risk of regression if there is an existing consumer
