--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1226,3 +1226,4 @@ fa3fa55de0d6177fdcaf6fc254f13cc8f33c3eed # Try to fix up above
 27af31e44949fa85550176520ef7086a0d00fd7b # cleanup for clang
 5d69eca542ee17c618f9a55da52191d5e28b435f # Cosmetic fix, apply only in response to customer bug
 5fe6ec8f6ab549b6422e41551abb51802bd48bc7 # Tracepoint fix, small risk of regression if there is an existing consumer
+c708a4dc5ab547edc3d6537233ca9e79ea30ce47 # Tracepoint fix, small risk of regression if there is an existing consumer
