--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1227,3 +1227,6 @@ fa3fa55de0d6177fdcaf6fc254f13cc8f33c3eed # Try to fix up above
 5d69eca542ee17c618f9a55da52191d5e28b435f # Cosmetic fix, apply only in response to customer bug
 5fe6ec8f6ab549b6422e41551abb51802bd48bc7 # Tracepoint fix, small risk of regression if there is an existing consumer
 c708a4dc5ab547edc3d6537233ca9e79ea30ce47 # Tracepoint fix, small risk of regression if there is an existing consumer
+2f7a0f58948d8231236e2facecc500f1930fb996 # Runtime behaviour change, mild risk of regression so customer bug required
+9c0b4bb7f6303c9c4e2e34984c46f5a86478f84d # Runtime behaviour change, mild risk of regression so customer bug required
+b3edde44e5d4504c23a176819865cd603fd16d6c # Runtime behaviour change, mild risk of regression so customer bug required
