btrfs: fix the incorrect max_bytes value for find_lock_delalloc_range() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34565,6 +34565,7 @@
 	patches.suse/arm64-errata-Apply-workarounds-for-Neoverse-V3AE.patch
 	patches.suse/powerpc-pseries-msi-Fix-potential-underflow-and-leak-issue.patch
 	patches.suse/powerpc-powernv-pci-Fix-underflow-and-leak-issue.patch
+	patches.suse/btrfs-fix-the-incorrect-max_bytes-value-for-find_loc.patch
 	patches.suse/EDAC-i10nm-Skip-DIMM-enumeration-on-a-disabled-memor.patch
 	patches.suse/driver-core-PM-Set-power.no_callbacks-along-with-pow.patch
 	patches.suse/hwmon-mlxreg-fan-Separate-methods-of-fan-setting-com.patch
