blacklist.conf: Risk of regression for applications relying on current defaults

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1232,3 +1232,4 @@ c708a4dc5ab547edc3d6537233ca9e79ea30ce47 # Tracepoint fix, small risk of regress
 b3edde44e5d4504c23a176819865cd603fd16d6c # Runtime behaviour change, mild risk of regression so customer bug required
 b88f55389ad27f05ed84af9e1026aa64dbfabc9a # Broken feature removal but there is a risk it has current users
 900bbaae67e980945dec74d36f8afe0de7556d5a # Risk of regression for applications depending on existing behaviour, require customer bug
+2ae891b826958b60919ea21c727f77bcd6ffcc2c # Risk of regression for applications relying on current defaults
