RDMA/bnxt_re: Fix a potential memory leak in destroy_gsi_sqp (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -34894,6 +34894,7 @@
 	patches.suse/drm-panel-kingdisplay-kd097d04-Disable-EoTp.patch
 	patches.suse/regmap-slimbus-fix-bus_context-pointer-in-regmap-ini.patch
 	patches.suse/regulator-bd718x7-Fix-voltages-scaled-by-resistor-di.patch
+	patches.suse/RDMA-bnxt_re-Fix-a-potential-memory-leak-in-destroy_.patch
 
 	########################################################
 	# end of sorted patches
