--- a/series.conf
+++ b/series.conf
@@ -34895,6 +34895,7 @@
 	patches.suse/regmap-slimbus-fix-bus_context-pointer-in-regmap-ini.patch
 	patches.suse/regulator-bd718x7-Fix-voltages-scaled-by-resistor-di.patch
 	patches.suse/RDMA-bnxt_re-Fix-a-potential-memory-leak-in-destroy_.patch
+	patches.suse/RDMA-irdma-Fix-SD-index-calculation.patch
 
 	########################################################
 	# end of sorted patches
