RDMA/irdma: Set irdma_cq cq_num field during CQ create (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -12884,6 +12884,7 @@
 	patches.suse/regulator-bd718x7-Fix-voltages-scaled-by-resistor-di.patch
 	patches.suse/RDMA-bnxt_re-Fix-a-potential-memory-leak-in-destroy_.patch
 	patches.suse/RDMA-irdma-Fix-SD-index-calculation.patch
+	patches.suse/RDMA-irdma-Set-irdma_cq-cq_num-field-during-CQ-creat.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
