RDMA/hns: Fix recv CQ and QP cache affinity (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -34897,6 +34897,7 @@
 	patches.suse/RDMA-bnxt_re-Fix-a-potential-memory-leak-in-destroy_.patch
 	patches.suse/RDMA-irdma-Fix-SD-index-calculation.patch
 	patches.suse/RDMA-irdma-Set-irdma_cq-cq_num-field-during-CQ-creat.patch
+	patches.suse/RDMA-hns-Fix-recv-CQ-and-QP-cache-affinity.patch
 
 	########################################################
 	# end of sorted patches
