--- a/series.conf
+++ b/series.conf
@@ -12885,6 +12885,7 @@
 	patches.suse/RDMA-bnxt_re-Fix-a-potential-memory-leak-in-destroy_.patch
 	patches.suse/RDMA-irdma-Fix-SD-index-calculation.patch
 	patches.suse/RDMA-irdma-Set-irdma_cq-cq_num-field-during-CQ-creat.patch
+	patches.suse/RDMA-hns-Fix-recv-CQ-and-QP-cache-affinity.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
