--- a/series.conf
+++ b/series.conf
@@ -34898,6 +34898,7 @@
 	patches.suse/RDMA-irdma-Fix-SD-index-calculation.patch
 	patches.suse/RDMA-irdma-Set-irdma_cq-cq_num-field-during-CQ-creat.patch
 	patches.suse/RDMA-hns-Fix-recv-CQ-and-QP-cache-affinity.patch
+	patches.suse/RDMA-hns-Fix-the-modification-of-max_send_sge.patch
 
 	########################################################
 	# end of sorted patches
