--- a/series.conf
+++ b/series.conf
@@ -34899,6 +34899,7 @@
 	patches.suse/RDMA-irdma-Set-irdma_cq-cq_num-field-during-CQ-creat.patch
 	patches.suse/RDMA-hns-Fix-recv-CQ-and-QP-cache-affinity.patch
 	patches.suse/RDMA-hns-Fix-the-modification-of-max_send_sge.patch
+	patches.suse/RDMA-hns-Fix-wrong-WQE-data-when-QP-wraps-around.patch
 
 	########################################################
 	# end of sorted patches
