--- a/series.conf
+++ b/series.conf
@@ -12887,6 +12887,7 @@
 	patches.suse/RDMA-irdma-Set-irdma_cq-cq_num-field-during-CQ-creat.patch
 	patches.suse/RDMA-hns-Fix-recv-CQ-and-QP-cache-affinity.patch
 	patches.suse/RDMA-hns-Fix-the-modification-of-max_send_sge.patch
+	patches.suse/RDMA-hns-Fix-wrong-WQE-data-when-QP-wraps-around.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
