RDMA/bnxt_re: Don't fail destroy QP and cleanup debugfs earlier (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -30291,6 +30291,7 @@
 	patches.suse/RDMA-bnxt_re-Fix-max-SGEs-for-the-Work-Request.patch
 	patches.suse/RDMA-bnxt_re-Avoid-initializing-the-software-queue-f.patch
 	patches.suse/RDMA-bnxt_re-Avoid-sending-the-modify-QP-workaround-.patch
+	patches.suse/RDMA-bnxt_re-Don-t-fail-destroy-QP-and-cleanup-debug.patch
 	patches.suse/RDMA-core-Fix-ENODEV-error-for-iWARP-test-over-vlan2.patch
 	patches.suse/RDMA-bnxt_re-Fix-the-check-for-9060-condition.patch
 	patches.suse/RDMA-bnxt_re-Add-check-for-path-mtu-in-modify_qp.patch
