--- a/series.conf
+++ b/series.conf
@@ -55072,6 +55072,7 @@
 	patches.suse/xen-gntdev-remove-struct-gntdev_copy_batch-from-stac.patch
 	patches.suse/xen-netfront-Fix-TX-response-spurious-interrupts.patch
 	patches.suse/KVM-Pass-new-routing-entries-and-irqfd-when-updating.patch
+	patches.suse/KVM-SVM-Track-per-vCPU-IRTEs-using-kvm_kernel_irqfd-.patch
 	patches.suse/KVM-VMX-Extract-checking-of-guest-s-DEBUGCTL-into-he.patch
 	patches.suse/KVM-SVM-Disable-interception-of-SPEC_CTRL-iff-the-MS.patch
 	patches.suse/KVM-SVM-Pass-through-GHCB-MSR-if-and-only-if-VM-is-a.patch
