--- a/series.conf
+++ b/series.conf
@@ -32485,6 +32485,7 @@
 	patches.suse/KVM-x86-Reset-IRTE-to-host-control-if-new-route-isn-t-post.patch
 	patches.suse/KVM-x86-Explicitly-treat-routing-entry-type-changes-.patch
 	patches.suse/KVM-x86-Take-irqfds.lock-when-adding-deleting-IRQ-by.patch
+	patches.suse/iommu-amd-Return-an-error-if-vCPU-affinity-is-set-fo.patch
 	patches.suse/ceph-Fix-incorrect-flush-end-position-calculation.patch
 	patches.suse/splice-remove-duplicate-noinline-from-pipe_clear_now.patch
 	patches.suse/ata-libata-scsi-Fix-ata_mselect_control_ata_feature-.patch
