--- a/series.conf
+++ b/series.conf
@@ -53308,6 +53308,7 @@
 	patches.suse/KVM-x86-Reset-IRTE-to-host-control-if-new-route-isn-t-post.patch
 	patches.suse/KVM-x86-Explicitly-treat-routing-entry-type-changes-.patch
 	patches.suse/KVM-x86-Take-irqfds.lock-when-adding-deleting-IRQ-by.patch
+	patches.suse/iommu-amd-Return-an-error-if-vCPU-affinity-is-set-fo.patch
 	patches.suse/cxl-core-regs.c-Skip-Memory-Space-Enable-check-for-R.patch
 	patches.suse/ceph-Fix-incorrect-flush-end-position-calculation.patch
 	patches.suse/splice-remove-duplicate-noinline-from-pipe_clear_now.patch
