--- a/series.conf
+++ b/series.conf
@@ -32486,6 +32486,7 @@
 	patches.suse/KVM-x86-Explicitly-treat-routing-entry-type-changes-.patch
 	patches.suse/KVM-x86-Take-irqfds.lock-when-adding-deleting-IRQ-by.patch
 	patches.suse/iommu-amd-Return-an-error-if-vCPU-affinity-is-set-fo.patch
+	patches.suse/KVM-SVM-WARN-if-an-invalid-posted-interrupt-IRTE-ent.patch
 	patches.suse/ceph-Fix-incorrect-flush-end-position-calculation.patch
 	patches.suse/splice-remove-duplicate-noinline-from-pipe_clear_now.patch
 	patches.suse/ata-libata-scsi-Fix-ata_mselect_control_ata_feature-.patch
