KVM: SVM: WARN if an invalid posted interrupt IRTE entry is added (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53309,6 +53309,7 @@
 	patches.suse/KVM-x86-Explicitly-treat-routing-entry-type-changes-.patch
 	patches.suse/KVM-x86-Take-irqfds.lock-when-adding-deleting-IRQ-by.patch
 	patches.suse/iommu-amd-Return-an-error-if-vCPU-affinity-is-set-fo.patch
+	patches.suse/KVM-SVM-WARN-if-an-invalid-posted-interrupt-IRTE-ent.patch
 	patches.suse/cxl-core-regs.c-Skip-Memory-Space-Enable-check-for-R.patch
 	patches.suse/ceph-Fix-incorrect-flush-end-position-calculation.patch
 	patches.suse/splice-remove-duplicate-noinline-from-pipe_clear_now.patch
