KVM: SVM: Delete IRTE link from previous vCPU irrespective of new routing (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55074,6 +55074,7 @@
 	patches.suse/KVM-Pass-new-routing-entries-and-irqfd-when-updating.patch
 	patches.suse/KVM-SVM-Track-per-vCPU-IRTEs-using-kvm_kernel_irqfd-.patch
 	patches.suse/KVM-SVM-Delete-IRTE-link-from-previous-vCPU-before-s.patch
+	patches.suse/KVM-SVM-Delete-IRTE-link-from-previous-vCPU-irrespec.patch
 	patches.suse/KVM-VMX-Extract-checking-of-guest-s-DEBUGCTL-into-he.patch
 	patches.suse/KVM-SVM-Disable-interception-of-SPEC_CTRL-iff-the-MS.patch
 	patches.suse/KVM-SVM-Pass-through-GHCB-MSR-if-and-only-if-VM-is-a.patch
