--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1224,3 +1224,4 @@ fa3fa55de0d6177fdcaf6fc254f13cc8f33c3eed # Try to fix up above
 82ccdf062a64f3c4ac575c16179ce68edbbbe8e4 # cleanup designed to break kABI
 5a830bbce3af16833fe0092dec47b6dd30279825 # pure cleanup
 27af31e44949fa85550176520ef7086a0d00fd7b # cleanup for clang
+68889dfd547bd8eabc5a98b58475d7b901cf5129 # we do CONFIG_SOCK_CGROUP_DATA=y
