cpuset: fix failure to enable isolated partition when containing isolcpus (bsc#1241166).

--- a/series.conf
+++ b/series.conf
@@ -55783,6 +55783,7 @@
 	patches.suse/arm64-errata-Apply-workarounds-for-Neoverse-V3AE.patch
 	patches.suse/powerpc-pseries-msi-Fix-potential-underflow-and-leak-issue.patch
 	patches.suse/powerpc-powernv-pci-Fix-underflow-and-leak-issue.patch
+	patches.suse/cpuset-fix-failure-to-enable-isolated-partition-when-conta.patch
 	patches.suse/EDAC-i10nm-Skip-DIMM-enumeration-on-a-disabled-memor.patch
 	patches.suse/x86-resctrl-Refactor-resctrl_arch_rmid_read.patch
 	patches.suse/bpf-selftests-Fix-test_tcpnotify_user.patch
