cpuset: Use new excpus for nocpu error check when enabling root partition (bsc#1241166).

--- a/series.conf
+++ b/series.conf
@@ -12341,6 +12341,7 @@
 	patches.suse/powerpc64-modules-correctly-iterate-over-stubs-in-setup_ftrace_ool_stubs.patch
 	patches.suse/btrfs-return-any-hit-error-from-extent_writepage_io.patch
 	patches.suse/cpuset-fix-failure-to-enable-isolated-partition-when-conta.patch
+	patches.suse/cpuset-Use-new-excpus-for-nocpu-error-check-when-enabling-.patch
 	patches.suse/x86-resctrl-Refactor-resctrl_arch_rmid_read.patch
 	patches.suse/bpf-Explicitly-check-accesses-to-bpf_sock_addr.patch
 	patches.suse/bpf-arm64-Call-bpf_jit_binary_pack_finalize-in-bpf_jit_fre.patch
