--- a/series.conf
+++ b/series.conf
@@ -55784,6 +55784,7 @@
 	patches.suse/powerpc-pseries-msi-Fix-potential-underflow-and-leak-issue.patch
 	patches.suse/powerpc-powernv-pci-Fix-underflow-and-leak-issue.patch
 	patches.suse/cpuset-fix-failure-to-enable-isolated-partition-when-conta.patch
+	patches.suse/cpuset-Use-new-excpus-for-nocpu-error-check-when-enabling-.patch
 	patches.suse/EDAC-i10nm-Skip-DIMM-enumeration-on-a-disabled-memor.patch
 	patches.suse/x86-resctrl-Refactor-resctrl_arch_rmid_read.patch
 	patches.suse/bpf-selftests-Fix-test_tcpnotify_user.patch
