--- a/series.conf
+++ b/series.conf
@@ -53030,6 +53030,7 @@
 	patches.suse/tools-power-turbostat-report-CoreThr-per-measurement-interval.patch
 	patches.suse/cgroup-cpuset-Fix-incorrect-isolated_cpus-update-in-update_parent_effective_cpumask.patch
 	patches.suse/cgroup-cpuset-Fix-error-handling-in-remote_partition_disable.patch
+	patches.suse/cgroup-cpuset-Remove-remote_partition_check-make-update_cp.patch
 	patches.suse/cgroup-cpuset-Don-t-allow-creation-of-local-partition-over.patch
 	patches.suse/cgroup-cpuset-Fix-race-between-newly-created-partition-and.patch
 	patches.suse/KVM-s390-Don-t-use-pK-through-tracepoints.patch
